kubernetes/be/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-service
  namespace: tecvinson-app
  labels:
    app: flask-backend
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 5500
      targetPort: 5500
  type: LoadBalancer
